<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2025. Alessandro 'kLeZ' Accardo.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.klez</groupId>
	<artifactId>coding-challenges</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>Coding Challenges</name>
	<description>Questo progetto contiene le soluzioni ai vari coding challenges trovati sul sito https://codingchallenges.fyi</description>
	<url>https://github.com/kLeZ/coding-challenges</url>
	<organization>
		<name>kLeZ</name>
		<url>https://klez.me</url>
	</organization>
	<properties>
		<java.version>23</java.version>
		<!--Maven Compiler Configuration-->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
		<maven.compiler.enablePreview>false</maven.compiler.enablePreview>
		<!--Dependencies versions-->
		<lombok.version>1.18.36</lombok.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<logback-classic.version>1.5.16</logback-classic.version>
		<junit-jupiter.version>5.12.0</junit-jupiter.version>
		<jmh.version>1.37</jmh.version>
		<!--Plugins versions-->
		<maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
		<versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
		<git-hooks-maven-plugin.version>1.1.0</git-hooks-maven-plugin.version>
		<formatter-maven-plugin.version>2.25.0</formatter-maven-plugin.version>
		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
		<maven-pmd-plugin.version>3.26.0</maven-pmd-plugin.version>
		<doxia-module-markdown.version>2.0.0</doxia-module-markdown.version>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
		<jmh-maven-plugin.version>0.2.2</jmh-maven-plugin.version>
		<maven-project-info-reports-plugin.version>3.8.0</maven-project-info-reports-plugin.version>
		<maven-site-plugin.version>3.21.0</maven-site-plugin.version>
		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
		<spotbugs-maven-plugin.version>4.9.1.0</spotbugs-maven-plugin.version>
		<maven-surefire-report-plugin.version>3.5.2</maven-surefire-report-plugin.version>
		<maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-classic.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>${jmh.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.9.0</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${versions-maven-plugin.version}</version>
				<configuration>
					<ruleSet>
						<ignoreVersions>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-SNAPSHOT</version>
							</ignoreVersion>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-(alpha|beta|preview|dev)</version>
							</ignoreVersion>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-?([Aa]lpha|[Bb]eta|rc|RC|M)-?\d+</version>
							</ignoreVersion>
						</ignoreVersions>
					</ruleSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.pepperkit</groupId>
				<artifactId>git-hooks-maven-plugin</artifactId>
				<version>${git-hooks-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>initHooks</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<hooks>
						<pre-commit>./mvnw -B formatter:validate</pre-commit>
						<pre-push>./mvnw -B test</pre-push>
					</hooks>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>${formatter-maven-plugin.version}</version>
				<configuration>
					<lineEnding>LF</lineEnding>
					<encoding>UTF-8</encoding>
					<configFile>${project.basedir}/formatter-config.xml</configFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addDefaultImplementationEntries>false</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
				<executions>
					<execution>
						<id>create-jar-for-main1</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>me.klez.cc.wc.ccwc</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>ccwc</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.openjdk.jmh</groupId>
							<artifactId>jmh-generator-annprocess</artifactId>
							<version>${jmh.version}</version>
						</path>
						<dependency>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${lombok-mapstruct-binding.version}</version>
						</dependency>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-module-markdown</artifactId>
						<version>${doxia-module-markdown.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${spotbugs-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>spotbugs</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
							<goal>cpd-check</goal>
						</goals>
						<configuration>
							<printFailingErrors>true</printFailingErrors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pw.krejci</groupId>
				<artifactId>jmh-maven-plugin</artifactId>
				<version>${jmh-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>benchmark</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<benchmarkMode>thrpt</benchmarkMode>
					<fork>1</fork>
					<warmupForks>1</warmupForks>
					<threads>1</threads>
					<timeUnit>s</timeUnit>
					<resultFormat>json</resultFormat>
					<resultsFile>benchmark/results.json</resultsFile>
					<jvmArgsPrepend>--enable-preview</jvmArgsPrepend>
					<compilerArgs>
						<compilerArg>--enable-preview</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${versions-maven-plugin.version}</version>
				<configuration>
					<ruleSet>
						<ignoreVersions>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-SNAPSHOT</version>
							</ignoreVersion>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-(alpha|beta|preview|dev)</version>
							</ignoreVersion>
							<ignoreVersion>
								<type>regex</type>
								<version>.+-?([Aa]lpha|[Bb]eta|rc|RC|M)-?\d+</version>
							</ignoreVersion>
						</ignoreVersions>
					</ruleSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${spotbugs-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${maven-surefire-report-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>
</project>
